# ai-tinkerers-hackathon-project

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev.ipynb  makefile  pyproject.toml
.cursor/plans/: implement-db0dd3b1.plan.md
.cursor/rules/: general-rule.mdc  general-rules.mdc
examples/: literature_review_demo.py
scripts/: python.sh  python_path.sh
src/: app.py  main.py  multi_agent.py  prompt.py  zotero_app.py
src/literature_review/: literature_review.py
src/rerank/: rerank.py
src/utils/: arxiv.py
tests/literature_review/: test_literature_review.py
tests/rerank/: test_rerank.py
