[project]
name = "research-assistant"
version = "0.1.0"
description = "Research Assistant: AI Tinkerers x Google Cloud Hackathon Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.1.1",
    "google-adk>=1.15.1",
    "gradio>=5.47.2",
    "pyzotero>=1.6.16",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "RSE", # flake8-raise
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]

[tool.ruff.format]
# Preserve existing quote style to avoid churn.
quote-style = "preserve"
